nextcloud/maintenance.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nextcloud-cron
  namespace: nextcloud
spec:
  containers:
  - args:
    - upgrade
    command: ['sh', '-c', 'echo "Hello, Kubernetes!" && sleep 3600']
    image: nextcloud:21.0.2
    imagePullPolicy: IfNotPresent
    name: nextcloud
    securityContext:
      runAsUser: 33
      runAsGroup: 33
      # fsGroup: 33
    resources:
      requests:
        cpu: 100m
        memory: 128Mi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/www/
      name: nextcloud-data
      subPath: root
    - mountPath: /var/www/html
      name: nextcloud-data
      subPath: html
    - mountPath: /var/www/html/data
      name: nextcloud-data
      subPath: data
    - mountPath: /var/www/html/config
      name: nextcloud-data
      subPath: config
    - mountPath: /var/www/html/custom_apps
      name: nextcloud-data
      subPath: custom_apps
    - mountPath: /var/www/tmp
      name: nextcloud-data
      subPath: tmp
    - mountPath: /var/www/html/themes
      name: nextcloud-data
      subPath: themes
  securityContext:
    runAsUser: 33
    runAsGroup: 33
    fsGroup: 33
  volumes:
  - name: nextcloud-data
    persistentVolumeClaim:
      claimName: nextcloud-cron
