nextcloud/nextcloud.deployment.yaml
---
# Source: nextcloud/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
      app.kubernetes.io/instance: nextcloud
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud
        app.kubernetes.io/instance: nextcloud
        nextcloud-redis-client: "true"
    spec:
      containers:
        - name: nextcloud
          image: "nextcloud:19.0.3"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: "2"
              memory: 2048Mi
            requests:
              cpu: "1"
              memory: 1024Mi
          volumeMounts:
            - name: nextcloud-data
              mountPath: /var/www/
              subPath: root
            - name: nextcloud-data
              mountPath: /var/www/html
              subPath: html
            - name: nextcloud-data
              mountPath: /var/www/html/data
              subPath: data
            - name: nextcloud-data
              mountPath: /var/www/html/config
              subPath: config
            - name: nextcloud-data
              mountPath: /var/www/html/custom_apps
              subPath: custom_apps
            - name: nextcloud-data
              mountPath: /var/www/tmp
              subPath: tmp
            - name: nextcloud-data
              mountPath: /var/www/html/themes
              subPath: themes
      volumes:
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-ssd
      # Will mount configuration files as www-data (id: 33) for nextcloud
      securityContext:
        fsGroup: 33
